# learnOpenGL

./: CMakeLists.txt
helloGL/: CMakeLists.txt  main.cpp  shaders.hpp  simple.frag  simple.vert
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp  shaders.cpp.in  shaders.hpp
